# beets-additionalfiles

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/: PUBLISHING.md  RELEASE-GUIDE.md  copilot-instructions.md
.github/workflows/: ci.yml  publish-test.yml  publish.yml
beetsplug/: __init__.py  additionalfiles.py  extrafiles.py
tests/: __init__.py  test_additionalfiles.py  test_extrafiles.py
