[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beets-additionalfiles"
version = "0.0.1"
description = "A plugin for beets that copies additional files and directories during the import process."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jan Holthuis", email = "holthuis.jan@gmail.com" },
    { name = "Bill Findeisen", email = "billf5293@gmail.com"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "beets>=2.5.1",
    "mediafile>=0.12.0",
    "setuptools",
]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/finnyb/beets-additionalfiles"
Repository = "https://github.com/finnyb/beets-additionalfiles"
Issues = "https://github.com/finnyb/beets-additionalfiles/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["beetsplug"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["beetsplug"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

