[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beets-additionalfiles"
version = "1.1.0-dev"
description = "A plugin for beets that copies additional files and directories during the import process."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jan Holthuis", email = "holthuis.jan@gmail.com" },
    { name = "Bill Findeisen", email = "billf5293@gmail.com"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "beets>=2.5.1",
    "mediafile>=0.12.0",
    "setuptools",
]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/finnyb/beets-additionalfiles"
Repository = "https://github.com/finnyb/beets-additionalfiles"
Issues = "https://github.com/finnyb/beets-additionalfiles/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["beetsplug"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["beetsplug"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "PTH",     # use pathlib (conflicts with beets API which uses os.path)
    "Q000",    # single vs double quotes (handled by formatter)
    "Q001",    # single vs double quotes (handled by formatter)
    "ARG002",  # unused method argument (required by beets plugin API)
    "UP024",   # replace IOError with OSError (keep for compatibility)
    "B007",    # loop variable not used (needed for unpacking in for-else)
    "B905",    # zip without strict (not needed for Python 3.10+)
    "PLW2901", # loop variable overwritten (intentional in this case)
    "RET504",  # unnecessary assignment before return (clearer this way)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004", # magic values in tests are OK
    "S101",    # asserts are OK in tests
    "ARG001",  # unused function arguments (fixtures)
    "PT009",   # use unittest style assertions (we're using unittest.TestCase)
    "RUF012",  # mutable class attributes (test configuration dicts)
]

[tool.ruff.lint.isort]
known-first-party = ["beetsplug"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

